[package]

name = "utp"
version = "0.6.0"
authors = ["Ricardo Martins <ricardo@scarybox.net>"]

description = "A µTP (Micro/uTorrent Transport Library) library implemented in Rust"
homepage = "https://github.com/meqif/rust-utp"
repository = "https://github.com/meqif/rust-utp"
documentation = "http://meqif.github.io/rust-utp"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["utp", "networking", "protocol", "transport"]

[dependencies]
time = "*"
num = "*"
log = "0.3"
env_logger = "0.3"
rand = "0.3"
net2 = "*"

[dependencies.with_read_timeout]
path = "with_read_timeout"
version = "*"

[dev-dependencies]
quickcheck = "*"

[lib]
name = "utp"

[[example]]
name = "utpcat"
path = "examples/utpcat/main.rs"
test = false
bench = false

[[example]]
name = "echo-server"
path = "examples/echo-server/main.rs"
test = false
bench = false

[[example]]
name = "hole-punching"
path = "examples/hole-punching/main.rs"
test = true
bench = false

[[example]]
name = "utpcat2"
path = "examples/utpcat2/main.rs"
test = true
bench = false

[[example]]
name = "echo-server2"
path = "examples/echo-server2/main.rs"
test = true
bench = false